--- a/Prodavnica/Client/View/AddProductToBillView.xaml
+++ b/Prodavnica/Client/View/AddProductToBillView.xaml
@@ -1,38 +1,53 @@
 ﻿<Window x:Class="Client.View.AddProductToBillView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Client.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:Client.View"
+		xmlns:viewModels="clr-namespace:Client.ViewModel"
+        mc:Ignorable="d"
+        Title="Add product to bill"
+		Name="newProductWindow"
+		Height="330" 
+		Width="270" 
+		MinHeight="330"
+		MinWidth="270" 
+		WindowStyle="ToolWindow" 
+		ResizeMode="NoResize">
+    <Window.DataContext>
+        <viewModels:AddProductToBillViewModel/>
+    </Window.DataContext>
+
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-
-        <DataGrid 
-            Grid.Row="0"
-            Name="productsDataGrid"
-            SelectionMode="Extended"
-            ItemsSource="{Binding ProductsList}"
-            AutoGenerateColumns="False"
-            IsReadOnly="True" Margin="0,0,226,0">
-            <DataGrid.Columns>
-              
-                <DataGridTextColumn Header="Product Name" Binding="{Binding ProductName}"/>
-                <DataGridTextColumn Header="Product Name" Binding="{Binding Manufacturer}"/>
-                <DataGridTextColumn Header="Price" Binding="{Binding Price}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-
-        <Button
-            Content="Add Selected Products"
-            Command="{Binding NewProdcutToBillCommand}"
-            CommandParameter="{Binding ElementName=NewProdcutToBill}"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Bottom"
-            Margin="0,0,47,218"/>
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+            <Label Content="Name: "/>
+            <TextBox
+				Width="200"
+				HorizontalAlignment="Left"
+				Margin="5, 0"
+				Text="{Binding Path=Name, Mode=TwoWay}"/>
+            <Label Content="Manufacturer: "/>
+            <TextBox
+				Width="200"
+				HorizontalAlignment="Left"
+				Margin="5, 0"
+				Text="{Binding Path=Manufacturer, Mode=TwoWay}"/>
+            <Label Content="Price: "/>
+            <TextBox
+				Width="200"
+				HorizontalAlignment="Left"
+				Margin="5, 0"
+				Text="{Binding Path=Price, Mode=TwoWay}"/>
+            <Button 
+				Content="Add product"
+				Width="200"
+				HorizontalAlignment="Left"
+				Margin="5"
+				Command="{Binding AddProductCommand}"
+				CommandParameter="{Binding ElementName=newProductWindow}"/>
+            <Label
+				Content="{Binding ErrorMessage}"
+				Foreground="Red"/>
+        </StackPanel>
     </Grid>
 </Window>
